--- a/index2.html
+++ b/index2.html
@@ -39,6 +39,7 @@ She was more beautiful than thy first love,
 But now lies under boards.
 
 <br><br>
+<a href="xyz.html" target="_self">open new link</a>
 
 </i></font><font face="Courier M" color="orange" font="54"> I’ve lost friends and family
 to the veiled imposter
